name:                hoq
version:             0.1.0.0
synopsis:            A language based on homotopy type theory with an interval object
-- description:         
tested-with:         GHC == 7.6.3
homepage:            http://github.com/valis/hoq
license:             GPL-2
license-file:        LICENSE
author:              isaev
maintainer:          valery.isaev@gmail.com
category:            Dependent Types
build-type:          Custom
cabal-version:       >=1.10
data-dir:            data
data-files:          hoq.vim
extra-source-files:  README.md,
                     src/Syntax/Grammar.cf,
                     examples/basics.hoq,
                     examples/hlevel.hoq,
                     examples/circle.hoq,
                     examples/lem.hoq

source-repository head
  type:     git
  location: git://github.com/valis/hoq.git

executable hoq
  main-is:             Main.hs
  other-modules:       REPL,
                       Normalization, 
                       File.Load,
                       Syntax.BNFC.ParGrammar,
                       Syntax.BNFC.LexGrammar,
                       Syntax.Term, Syntax.Scope,
                       Syntax.Expr, Syntax.PrettyPrinter,
                       Syntax.ErrorDoc, Syntax.Pattern,
                       TypeChecking.Definitions.Patterns,
                       TypeChecking.Definitions.Coverage,
                       TypeChecking.Definitions.DataTypes,
                       TypeChecking.Definitions.Functions,
                       TypeChecking.Definitions.Conditions,
                       TypeChecking.Definitions.Termination,
                       TypeChecking.Definitions,
                       TypeChecking.Expressions,
                       TypeChecking.Monad.Scope,
                       TypeChecking.Monad.Warn,
                       TypeChecking.Monad,
                       TypeChecking.Context
  build-depends:       base >=4.6 && <4.7, mtl >=2.1,
                       BNFC >= 2.5, array >= 0.4, pretty >=1.1,
                       prelude-extras >=0.4, readline >=1.0
  build-tools:         happy >= 1.15 && < 2,
                       alex >= 2.3.1 && < 3.1
  hs-source-dirs:      src
  default-language:    Haskell2010
