name:                hoq
version:             0.3
synopsis:            A language based on homotopy type theory with an interval type
-- description:         
tested-with:         GHC == 7.6.3
homepage:            http://github.com/valis/hoq
license:             GPL-2
license-file:        LICENSE
author:              Valery Isaev
maintainer:          valery.isaev@gmail.com
category:            Dependent Types
build-type:          Custom
cabal-version:       >=1.10
data-dir:            data
data-files:          hoq.vim
extra-source-files:  README.md,
                     examples/Paths.hoq,
                     examples/basics.hoq,
                     examples/hlevel.hoq,
                     examples/circle.hoq,
                     examples/lem.hoq,
                     examples/Nat.hoq,
                     examples/Cats/Simp1.hoq,
                     examples/Cats/Cat.hoq

source-repository head
  type:     git
  location: git://github.com/valis/hoq.git

executable hoq
  main-is:             Main.hs
  other-modules:       REPL,
                       Normalization, 
                       File.Load,
                       Syntax, Syntax.Term, Syntax.Parser,
                       Syntax.PrettyPrinter, Syntax.ErrorDoc,
                       Syntax.Parser.Lexer, Syntax.Parser.Parser,
                       Semantics, Semantics.Value, Semantics.Pattern,
                       TypeChecking.Definitions.Records,
                       TypeChecking.Definitions.DataTypes,
                       TypeChecking.Definitions.Functions,
                       TypeChecking.Definitions.Termination,
                       TypeChecking.Definitions,
                       TypeChecking.Expressions.Utils,
                       TypeChecking.Expressions.Patterns,
                       TypeChecking.Expressions.Coverage,
                       TypeChecking.Expressions.Conditions,
                       TypeChecking.Expressions.Telescopes,
                       TypeChecking.Expressions,
                       TypeChecking.Monad.Scope,
                       TypeChecking.Monad.Warn,
                       TypeChecking.Monad,
                       TypeChecking.Context
  build-depends:       base >=4 && <5, mtl >=2.1, filepath >=1.3,
                       bytestring >=0.10, void >= 0.6,
                       bifunctors >= 4.0,
                       array >= 0.4, pretty >=1.1,
                       readline >=1.0
  build-tools:         happy >= 1.15 && < 2,
                       alex >= 2.3.1
  hs-source-dirs:      src
  default-language:    Haskell2010
